
I redid the options variables and constants to try and make things
more standardized, and to make room for future toggles as well.  This
should make David Lloyd a bit happier, 'cause now we can get his patch
in here. :)

Hopefully I didn't break anything....
----------------------------------------------------------------------
Mon Aug 25 21:08:20 2003                        Michael Jennings (mej)

Patch from David Lloyd <dmlloyd@tds.net>.  Removed the NO_BRIGHTCOLOR
and NO_BOLDOVERSTRIKE defines.  If you want to do NO_BRIGHTCOLOR, set
colors 8-16 the same as 0-7. :P  For bold overstrike, it's now an
option (--overstrike-bold).  There are also options to deactivate the
"bold" and "blink" attributes' setting of high-intensity colors, and
to allow non-default foreground colors to be bolded.
----------------------------------------------------------------------
Mon Oct 27 21:39:29 2003                        Michael Jennings (mej)

Changed -D/--desktop option to use EWMH-compliant desktop atom.

Add support for EWMH icon property.
----------------------------------------------------------------------
Fri Nov  7 12:26:11 2003                        Michael Jennings (mej)

Fixed stupid mathematical blunder in the font handling code pointed
out by Laurence J. Lane <ljlane@debian.org>.

Allow save_buff() script function to dump to stderr if no file is
specified.  Note that script functions CANNOT be triggered by escape
sequences.
----------------------------------------------------------------------
Fri Nov 28 09:04:49 2003                        Michael Jennings (mej)

Changes for compatibility with newer LibAST.
----------------------------------------------------------------------
Tue Dec  9 22:26:17 2003                        Michael Jennings (mej)

Add libast libs to GRLIBS.

Hopefully fixed Etbg_update_list to be Solaris /bin/sh-friendly.
----------------------------------------------------------------------